--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "eslint:recommended",
   "env": {
+    "node": true,
     "browser": true,
     "es6": true,
     "jquery": true
@@ -9,9 +10,25 @@
     "sourceType": "module"
   },
   "rules": {
-    "no-comma-dangle" : 0
+    "arrow-body-style": "error",
+    "arrow-parens": "error",
+    "arrow-spacing": "error",
+    "generator-star-spacing": "error",
+    "no-duplicate-imports": "error",
+    "no-useless-computed-key": "error",
+    "no-useless-constructor": "error",
+    "no-useless-rename": "error",
+    "no-var": "error",
+    "object-shorthand": "error",
+    "prefer-arrow-callback": "error",
+    "prefer-const": "error",
+    "prefer-spread": "error",
+    "prefer-template": "error",
+    "rest-spread-spacing": "error",
+    "template-curly-spacing": "error",
+    "yield-star-spacing": "error"
   },
-  "globals": [
-    "PIXI"
-  ]
+  "globals": {
+    "PIXI": true
+  }
 }
